[package]
name = "wwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
regex = "1.7.1"
windows-sys = { version = "0.45.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
